--- a/view/account_journal_invoice_sequence_list.xml
+++ b/view/account_journal_invoice_sequence_list.xml
@@ -6,9 +6,9 @@ copyright notices and license terms. -->
     <field name="company"/>
     <field name="journal"/>
     <field name="fiscalyear"/>
-    <field name="period"/>
+    <field name= "users"/>
     <field name="out_invoice_sequence"/>
     <field name="out_credit_note_sequence"/>
-    <field name="in_invoice_sequence"/>
-    <field name="in_credit_note_sequence"/>
+    <!--field name="in_invoice_sequence"/>
+    <field name="in_credit_note_sequence"/-->
 </tree>
